# pyxis

./: .flake8  .gitignore  .mypy.ini  Dockerfile  Pipfile  README.md  commands.py  db_query.py  pyproject.toml  settings.py  setup.py  style.sh
.github/workflows/: ci.yaml
data_population/: data_config.py  database_tables.py  tasks.py
data_population/carina/: tsv_generation.py
data_population/common/: db.py  helpers.py  models.py  utils.py
data_population/db_tasks/: db_tasks.py
data_population/polaris/: components.py  data_generation.py  db_tasks.py  row_generation.py  tsv_generation.py
data_population/tsv_creation/: carina_generators.py  fixtures.py  polaris_generators.py  tsv_manager.py  vela_generators.py
data_population/tsv_creation/fixtures/: __init__.py  carina.py  common.py  polaris.py  task_types.py  vela.py
data_population/tsv_creation/generators/: carina_generators.py  cosmos_generators.py  polaris_generators.py  task_generators.py  vela_generators.py
data_population/vela/: tsv_generation.py
db_testing/: sqlalchemy_test.py  tsv_test.py
environment/: __init__.py
locust_performance_testing/: helpers.py  locust_config.py  locustfile.py  locustfile_dev.py  user_tasks.py
router/: Dockerfile  nginx.conf  nginx.config
