[tool.poetry]
name = "pyxis"
version = "0.0.0"
description = "Performance Tests for BPL"
authors = ["Bink <bink@bink.bink>"]
readme = "README.md"
repository = "https://github.com/binkhq/pyxis"

[tool.poetry.dependencies]
python = "^3.10"
locust = "1.5.2"
faker = "^13.15.1"
psycopg2-binary = "^2.9.3"
azure-keyvault-secrets = "^4.5.1"
azure-identity = "^1.11.0"
jinja2 = "==3.0.3"
itsdangerous = "==2.0.1"
redis = "^4.3.4"
werkzeug = "==2.0.3"
environs = "^9.5.0"
typer = "^0.6.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
xenon = "^0.9.0"
isort = "^5.10.1"
ipython = "^8.5.0"
mypy = "^0.971"
pylint = "^2.15.3"
types-redis = "^4.3.21"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
lines_between_types = 1

[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pylint.MASTER]
load-plugins=[
    "pylint.extensions.mccabe"
]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "logging-fstring-interpolation",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "consider-using-f-string",
    "too-many-instance-attributes",
    "duplicate-code", # pylint definition of "duplicate" is way too loose (ex: fastapi route definitions are flagged).
]
good-names=["k", "v", "i", "q", "fn", "ex", "dt", "tz"]
[tool.pytest.ini_options]
asyncio_mode = "strict"